Bug 405393 - ZWNJ and ZWJ unicode characters are failing to render correctly. r=roc.